<resources>
    <string name="app_name">PP免费小说</string>

    <string name="state_error">数据加载失败</string>
    <string name="state_reload">重新加载</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="book_list_detail">书单详情</string>

    <string name="book_manage">批量管理</string>
    <string name="x_selected">已选择 %1$d</string>
    <string name="select_all">全选</string>
    <string name="un_select_all">取消全选</string>

    <string-array name="topic_tabs">
        <item>本周最热</item>
        <item>最新发布</item>
        <item>最多收藏</item>
    </string-array>

    <string-array name="ranking_tabs">
        <item>周榜</item>
        <item>月榜</item>
        <item>总榜</item>
    </string-array>

    <string-array name="gender_tabs">
        <item>男生</item>
        <item>女生</item>
    </string-array>

    <string name="recommend">追书</string>
    <string name="discover">发现</string>

    <string name="ranking">排行榜</string>
    <string name="topic">主题书单</string>
    <string name="category">分类</string>

    <string name="discussion">讨论</string>
    <string name="review">书评</string>

    <string name="to_add">去添加</string>
    <string name="default_book_title">大主宰</string>
    <string name="default_book_minor_cate">异术超能</string>
    <string name="default_book_sub_title">21小时前:第1581章 魔踪与八目</string>

    <string name="no_internet_desc">网络被外星人劫持啦</string>
    <string name="error_desc">出错啦</string>
    <string name="book_detail">书籍详情</string>
    <string name="book_detail_retention_ratio">%1$s%%</string>
    <string name="book_detail_user_lv">&#160;lv.%1$d</string>
    <string name="book_detail_recommend_book_list_book_count">共%1$d本书 |&#160;</string>
    <string name="book_detail_recommend_book_list_collect_count">%1$d人收藏</string>
    <string name="search_hint_text">输入书名或作者名</string>
    <string name="subject_book_list_detail_book_word_count">|  %1$d&#160;万字</string>
    <string name="subject_book_list_detail_book_lately_follower">%1$d&#160;人在追&#160;</string>

    <string name="search_result_lately_follower">"%1$d人在追  |  "</string>
    <string name="search_result_retention_ratio">"%1$s%%读者留存  |  "</string>
    <string name="retention_ratio">"%1$s%%读者留存"</string>
    <string name="search_result_author">%1$s著</string>

    <string name="book_detail_has_joined_the_book_shelf">《%1$s》成功加入书架</string>
    <string name="book_detail_has_remove_the_book_shelf">已移除《%1$s》</string>

    <string name="book_detail_all_review_count">全部书评%1$d条</string>
    <string name="book_detail_post_count">共有%1$d个帖子</string>

    <string name="category_book_count">%1$d本</string>

    <string name="topic_book_count">共%1$d本书</string>
    <string name="topic_book_collection">%1$d人收藏</string>

    <string name="remove_selected_book">移除所选书籍</string>
    <string name="delete_local_cache">同时删除本地缓存</string>
</resources>
