<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/y8"
    android:layout_marginLeft="@dimen/x16"
    android:layout_marginRight="@dimen/x16"
    android:layout_marginTop="@dimen/y8"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white_7"
    app:cardCornerRadius="@dimen/x12"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/x16">

        <ImageView
            android:id="@+id/iv_book_cover"
            android:layout_width="@dimen/x90"
            android:layout_height="@dimen/y120"
            android:scaleType="centerInside"
            android:src="@mipmap/cover_default"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x32"
            android:orientation="vertical">

            <com.neuroandroid.pyreader.widget.NoPaddingTextView
                android:id="@+id/tv_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/default_book_title"
                android:textColor="@color/colorGray333"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y16"
                android:orientation="horizontal">

                <com.neuroandroid.pyreader.widget.NoPaddingTextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/search_result_lately_follower"
                    android:textColor="@color/colorGray666"
                    android:textSize="11sp"/>

                <com.neuroandroid.pyreader.widget.NoPaddingTextView
                    android:id="@+id/tv_retention_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/search_result_retention_ratio"
                    android:textColor="@color/colorGray666"
                    android:textSize="11sp"/>

                <com.neuroandroid.pyreader.widget.NoPaddingTextView
                    android:id="@+id/tv_book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/search_result_author"
                    android:textColor="@color/colorGray666"
                    android:textSize="11sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>